kubernetes/grpcserver1/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grpcserver1
  labels:
    istio-env: istio-control
    istio-injection: enabled
