kubernetes/grpcserver1/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grpcserver1
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpcserver1
  name: grpcserver1
  namespace: grpcserver1
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: grpcserver1
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grpcserver1
        authority-jwt: enabled
    spec:
      containers:
        - image: ${CONTAINER_REGISTRY}/grpcserver1:a8867d7
          imagePullPolicy: Always
          name: grpcserver1
          ports:
            - containerPort: 9000
              name: grpc
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: grpcserver1
  namespace: grpcserver1
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: grpcserver1
