kubernetes/grpcserver1/sidecar.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: egress-whitelist
  namespace: grpcserver1
spec:
  egress:
    - hosts:
        - "grpcserver2/*"
        - "istio-system/*"
        - "istio-control/*"
